Made all the nav links active because it looked better.

--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,8 @@ hedding but I disagree based on the way I am using it. -->
 	<nav class="navbar navbar-expand navbar-light bg-light">
 		<div class="navbar-nav" id="navbar">
 
-			<a class="nav-link" href="index.html">Home</a>
-			<a class="nav-link" href="officers.html">Club Officers</a>
+			<a class="nav-link active" href="index.html">Home</a>
+			<a class="nav-link active" href="officers.html">Club Officers</a>
 			<a class="nav-link active" href="projects.html">Projects</a>
 
 		</div>
