--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@ hedding but I disagree based on the way I am using it. -->
 		<div class="navbar-nav" id="navbar">
 
 			<a class="nav-link active" href="index.html">Home</a>
-      <a class="nav-link active" href="officers.html">Club Officers</a>
-      <a class="nav-link active" href="projects.html">Projects</a>
+			<a class="nav-link active" href="officers.html">Club Officers</a>
+			<a class="nav-link active" href="projects.html">Projects</a>
+      <a class="nav-link active" href="resources.html">Resources</a>
       <li> <a href="#">Theme</a>
         <ul>
           <li><a href="#">Red</a></li>
@@ -83,6 +84,8 @@ hedding but I disagree based on the way I am using it. -->
             <a href="officers.html">officers</a>
             <br>
             <a href="projects.html">projects</a>
+            <br>
+            <a href="resources.html">resources</a>
             
         </div>
     </body>
