--- a/officers.html
+++ b/officers.html
@@ -30,6 +30,7 @@ hedding but I disagree based on the way I am using it. -->
 			<a class="nav-link active" href="index.html">Home</a>
 			<a class="nav-link active" href="officers.html">Club Officers</a>
 			<a class="nav-link active" href="projects.html">Projects</a>
+      <a class="nav-link active" href="resources.html">Resources</a>
 
 		</div>
 	</nav>
@@ -127,6 +128,8 @@ hedding but I disagree based on the way I am using it. -->
       <a href="officers.html">officers</a>
       <br>
       <a href="projects.html">projects</a>
+      <br>
+      <a href="resources.html">resources</a>
             
     </div>
   </body>
