Add to home page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ hedding but I disagree based on the way I am using it. -->
 			<a class="nav-link active" href="officers.html">Club Officers</a>
 			<a class="nav-link active" href="projects.html">Projects</a>
       <a class="nav-link active" href="resources.html">Resources</a>
+      <a class="nav-link active" href="#Join-now">Join Now</a>
       <li> <a href="#">Theme</a>
         <ul>
           <li><a href="#">Red</a></li>
@@ -62,18 +63,73 @@ hedding but I disagree based on the way I am using it. -->
 
 		<section>
 			<sh>
-				Join now!
+				Tech Talks
 			</sh>
       <br>
       <br>
       <p>
-        Join our remind by texting @tamcsclub to 81010.
-      </p>
-      <p>
-        Fill out a form about your interests and abilites
-        <a href='https://docs.google.com/forms/d/e/1FAIpQLSdXuHgHrAoX1zGAPdWz_rN5e5biblSWnl250ZXF33dA13_dWg/viewform'>here</a>
+        We live in a community full of people who do interesting things resting to computers. 
+        My neighbor literally helped design the internet. Tech Talks are where we will 
+        bring interesting people to tell you about their jobs and experience
       </p>
     </section>
+    <section>
+			<sh>
+				Demo Days
+			</sh>
+      <br>
+      <br>
+      <p>
+        We want to hold events for everyone to demo their projects to the community. 
+        This is intended to give a bit of purpose to all your hard work 
+        through bragging to your parents.
+      </p>
+    </section>
+    <section>
+			<sh>
+				Cool Stuff Happening Right Now
+			</sh>
+      <br>
+      <br>
+      <p>
+        Recentaly Linus built an auto encoder that distills pictures of number 
+        down to three number before creating recreations.
+      </p>
+      <p>
+        What is an autoencoder? It is a neural network that takes an input, simplifies it, then recreates it. (If you don’t know what a neural network is we will walk you through it)
+      </p>
+      <img src="Images/auto-encoder.png" style="width:100%;" alt="Picture of autoencoder disign">
+      <p>
+         An autoencoder starts to get useful when you split up the halves. 
+         For example you could distil an image down into just three numbers 
+         then reconstruct it from scratch. This would allow you to transmit 
+         three numbers instead of a 28 X 28 grid. You can see this in action 
+         in the video below. If you want to learn how to do cool things 
+         like this get in contact.
+      </p>
+      <video width="80%" height="auto" controls>
+        <source src="videos/mnist-ae-sneakpeak.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </section>
+    <a id="Join-now">
+      <section>
+        <br>
+			  <sh>
+			  	Join now!
+			  </sh>
+        <br>
+        <br>
+        <p>
+          Join our remind by texting @tamcsclub to 81010.
+        </p>
+        <p>
+          Fill out a form about your interests and abilites
+          <a href='https://docs.google.com/forms/d/e/1FAIpQLSdXuHgHrAoX1zGAPdWz_rN5e5biblSWnl250ZXF33dA13_dWg/viewform'>here</a>
+        </p>
+        <br>
+      </section>
+    </a>
             
         </main>
         <!-- footer -->
