Update auto-encoder image

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ hedding but I disagree based on the way I am using it. -->
       <p>
         What is an autoencoder? It is a neural network that takes an input, simplifies it, then recreates it. (If you don’t know what a neural network is we will walk you through it)
       </p>
-      <img src="Images/auto-encoder.png" style="width:100%;" alt="Picture of autoencoder disign">
+      <img src="Images/ae-labled-vis.png" style="width:100%;padding-bottom:1rem;" alt="Picture of autoencoder disign">
       <p>
          An autoencoder starts to get useful when you split up the halves. 
          For example you could distil an image down into just three numbers 
